# creatercav4

./: .gitignore  CLAUDE.md  CONVENTIONS.md  MIGRATION_SUMMARY.md  Makefile  README.md  config.ini.example  debug_kt_mapping.py  detailed_jira_test.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  simple_connectivity_test.py  test_comprehensive_fix.py  test_display_logic.py  test_dropdown_fix.py  test_dropdown_issue.py  test_jira.py  test_jira_simple.py  test_mcp_jira.py  test_new_kt.py  test_refactored_architecture.py  test_table.html  test_table_render.py
backup_pre_refactor/: app.py  rca_generator.py
docs/: CODEBASE_CLEANUP.md  COMPLETE_INTEGRATION_SUMMARY.md  FILEHANDLER_FIX.md  FINAL_REFACTORING_SUMMARY.md  INTEGRATION_PLAN.md  README.md  REFACTOR_PLAN.md  rca_template_doc.docx
scripts/: cleanup_and_analyze.py
src/: __init__.py  app.py  config.py  mcp_client.py  mcp_client_simple.py  rca_generator.py
src/prompts/: contap_prompt  formal_rca_prompt  kt-analysis_prompt  netapp_prompt  sap_prompt
src/scripts/: __init__.py  deploy.sh  migrate_codebase.py
src/ui/: main_app.py  main_app_new.py  main_app_old.py
src/utils/: __init__.py  file_handler.py  logger.py
test/: __init__.py
test/debug/: __init__.py  debug_display_mapping.py  debug_formal_rca.py  debug_jira_test.py  test_issue.txt
test/e2e/: __init__.py  test_netapp_final.py  test_width_demo.py
test/integration/: __init__.py  test_all_fixes.py  test_filehandler_fix.py  test_formal_rca_fixed.py  test_mcp_import.py  test_rca_jira_flow.py
test/unit/: __init__.py  conftest.py  test_fixed_imports.py  test_formal_rca_parsing.py  test_formal_rca_prompt.py  test_full_formal_rca.py  test_imports.py  test_kt_actual.py  (+4 more)
tests/: conftest.py  test_config.py  test_file_handler.py  test_rca_generator.py
(+11 files in other folders)
