[project]
name = "test-mcp"
version = "0.1.0"
description = "MCP-based Root Cause Analysis Tool with Jira Integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=1.4.0",
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "PyPDF2>=3.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "jira>=3.5.0",
    "configparser>=6.0.0",
    "aiofiles>=23.2.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
]
